# vpktool

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vpk.cpp  vpk.h  vpk1.cpp  vpk1.h  vpktool.cpp
scripts/: format.sh
src/: basearchive.h  pak.cpp  pak.h  pakdef.h  util.cpp  util.h  util.hpp  vpk.cpp  vpk.h  vpk.hpp  vpk1.cpp  vpk1.h  vpk2.cpp  vpkdef.h  vpktool.cpp  vpktool.h  wad.cpp  wad.h  waddef.h
